tests/errors/syn_call5.java
public class syn_call5{
public static void main(String[] args){
 method(4 ;
}
}